ajustando mais alguns detalhes no heatmap

--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -1539,3 +1539,7 @@ body {
     border-radius: 5px; 
     font-size: 12px;
 }
+
+.svg-pai-chart-2{
+    font-family: "Pixelify Sans", sans-serif;
+}
