--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -1558,3 +1558,15 @@ body {
 .svg-pai-chart-2{
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.tooltip-knn{
+    position: absolute;
+    background-color: rgba(44, 44, 44, 0.9);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: sans-serif;
+    font-size: 12px;
+    display: none;
+    z-index: 10;
+}
